@@ -526,6 +526,13 @@ Other
   . Removed xsl.security_prefs ini option. Use XsltProcessor::setSecurityPrefs()
     instead.
 
+- IMAP:
+  Starting with 7.0.33, rsh/ssh logins are disabled by default. Use
+  imap.enable_insecure_rsh if you want to enable them. Note that the IMAP
+  library does not filter mailbox names before passing them to rsh/ssh
+  command, thus passing untrusted data to this function with rsh/ssh enabled
+  is insecure.
+
 ========================================
 2. New Features
 ========================================
